// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateRenderer should render 1`] = `
<div>
  <td>
    Jul 10, 2018
  </td>
</div>
`;

exports[`DateRenderer should render with date provided in the datePath Array 1`] = `
<div>
  <td>
    Jul 10, 2018
  </td>
</div>
`;

exports[`DateRenderer should render with date provided in the datePath String 1`] = `
<div>
  <td>
    Jul 10, 2018
  </td>
</div>
`;

exports[`DateRenderer should use a custom date formatter 1`] = `
<div>
  <td>
    2018 July 10
  </td>
</div>
`;
